# zero-test

./: $  .dockerignore  .gitignore  CLAUDE.md  README.md  TODO.md  [object  api-map.config  api.config  get  index.js  init  init.js  log-config.json  package-lock.json  package.json  server.config  test.sh  zero-test-skill.skill
Docker/: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml
cli/: index.js  package.json
conf/: api.config  file_map.config  login.config  server.config  server1.config
config/: api.config  file_map.config  log-config.json  server.config
demo/: testcase_demo
dockerapi/: test.http
pub/: markdown.css  swaggerr.json
render-mdpdf-service/: ._target  .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build-deploy-force.sh  build-deploy-full.sh  build-deploy-musl.sh  build-deploy.sh  build-local.sh  build-mdpdf-js.sh  build.sh  source.sh
render-mdpdf-service/render-pdf-mdpdf/: package.json
render-mdpdf-service/render-pdf-mdpdf/assets/: markdown-pdf.css
render-mdpdf-service/render-pdf-mdpdf/scripts/: pdf-converter.js
render-mdpdf-service/src/: ._main.rs  main.rs
static/: file_map.config  log-config.json  root.config
test-env/: api.config  file_map.config  login.config  server.config
unittest/: MarkdownTest.js  PdfTest.js  PhantomColorWheel.js  PhantomLoadUrl.js  ShellTest.js  StringsTest.js  TestHttpPost.js  test-shell.sh
url-pdf/: README.md
url-pdf/cli/: app.sh  (+3 more)
util/: Formatter.js  Gen.js  Http.js  Path.js  Pdf.js  Reader.js  RestHttpParser.js  Save.js  Swagger.js  Test.js  Testcase.js  Url.js
(+148 files in other folders)
