[package]
name = "render-mdpdf-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
